Fix gameover readability on mobile

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -168,4 +168,21 @@ code {
     justify-content: center;
     flex-direction: column;
   }
+
+  .game-over.red{
+    padding-top: 5vh;
+    gap: 30px;
+  }
+  #end-scores{
+    flex-direction: column;
+    gap: 50px;
+
+  }
+}
+
+@media (max-width: 400px) {
+  .main{
+    width: fit-content;
+  }
+  
 }
